--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,2 @@
-#spring.security.user.name=a
-#spring.security.user.password=a
-
-#mongodb
-#spring.data.mongodb.authentication-database=admin
-#spring.data.mongodb.username=rootuser
-#spring.data.mongodb.password=rootpass
-#spring.data.mongodb.database=TMS
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=TMS
