--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+#spring.data.mongodb.uri=mongodb+srv://mongodb-user-1:mongodb-pass-1@cluster0.zvma3.mongodb.net/test
 spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.database=TMS
+spring.data.mongodb.database=sample_test
