--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 #spring.data.mongodb.uri=mongodb+srv://mongodb-user-1:mongodb-pass-1@cluster0.zvma3.mongodb.net/test
-spring.data.mongodb.uri=mongodb://localhost:27017
+#spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+#spring.data.mongodb.username =
+#spring.data.mongodb.password =
 spring.data.mongodb.database=sample_test
