--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.data.mongodb.port=27017
 #spring.data.mongodb.username =
 #spring.data.mongodb.password =
 spring.data.mongodb.database=sample_test
+spring.data.mongodb.auto-index-creation=true
