--- a/build.gradle
+++ b/build.gradle
@@ -20,17 +20,18 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.0'
+//	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.0'
 //	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.7.1'
+//	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.7.1'
 
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.7.0'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.0'
-	testImplementation 'org.springframework.security:spring-security-test:5.7.1'
+//	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.0'
+//	testImplementation 'org.springframework.security:spring-security-test:5.7.1'
+
 }
 
 tasks.named('test') {
