--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
+#connection
 #spring.data.mongodb.uri=mongodb+srv://mongodb-user-1:mongodb-pass-1@cluster0.zvma3.mongodb.net/test
-#spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-#spring.data.mongodb.username =
-#spring.data.mongodb.password =
+spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=sample_test
+
+#indexing
 spring.data.mongodb.auto-index-creation=true
+
+#logging
+log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %40.40c:%4L - %m%n
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+
+
+
+
