--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 #connection
 #spring.data.mongodb.uri=mongodb+srv://mongodb-user-1:mongodb-pass-1@cluster0.zvma3.mongodb.net/test
-spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.database=sample_test
+#spring.data.mongodb.uri=mongodb://172.17.0.5:27017/test
+#spring.data.mongodb.database=test
+spring.data.mongodb.host=host.docker.internal
+spring.data.mongodb.port=27017
 
 #indexing
 spring.data.mongodb.auto-index-creation=true
