--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,42 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.1'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
-	id 'war'
+    id 'java'
+    id 'org.springframework.boot' version '3.0.6'
+
 }
 
-group = 'com.springboot'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+springBoot {
+    buildInfo() //fills in build info in /actuator/info endpoint if enabled.
+}
+group = "com.entrust.cps"
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.0'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.0'
-//	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.0'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.7.1'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.0.4'
 
-	compileOnly 'org.projectlombok:lombok:1.18.24'
-	annotationProcessor 'org.projectlombok:lombok'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.7.0'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.0'
-	testImplementation 'org.springframework.security:spring-security-test:5.7.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
+    testImplementation 'io.rest-assured:rest-assured:5.3.0'
+
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+
+test {
+    useJUnitPlatform()
 }
